; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/linux/extr_in_evdev.c_in_evdev_init.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/linux/extr_in_evdev.c_in_evdev_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_pdata = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"in_sdl: Missing input platform data\0A\00", align 1
@in_evdev_drv = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @in_evdev_init(%struct.in_pdata* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.in_pdata*, align 8
  store %struct.in_pdata* %0, %struct.in_pdata** %3, align 8
  %4 = load %struct.in_pdata*, %struct.in_pdata** %3, align 8
  %5 = icmp ne %struct.in_pdata* %4, null
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @stderr, align 4
  %8 = call i32 @fprintf(i32 %7, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %2, align 4
  br label %15

9:                                                ; preds = %1
  %10 = load %struct.in_pdata*, %struct.in_pdata** %3, align 8
  %11 = getelementptr inbounds %struct.in_pdata, %struct.in_pdata* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.in_pdata*, %struct.in_pdata** %3, align 8
  %14 = call i32 @in_register_driver(i32* @in_evdev_drv, i32 %12, %struct.in_pdata* %13)
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %9, %6
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @in_register_driver(i32*, i32, %struct.in_pdata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
